--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "@angular/platform-browser": "^2.1.1",
     "@angular/platform-browser-dynamic": "^2.1.1",
     "@angular/router": "^3.1.1",
+    "@types/core-js": "^0.9.34",
+    "angular2-jwt": "^0.1.27",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^2.2.4",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.25",
-    "@types/core-js": "^0.9.34"
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
     "@types/jasmine": "^2.5.35",
